OO-7994: swap reviews tables, remove status/progress columns, wording